# neuro-edu

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  PH_LAUNCH_DASHBOARD.html  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  add_doi.py  add_doi_translations.py  add_hf_langs.py  article_payload.json  audit_demo.py  audit_hf.py  automate_prs.py  awesome-neuro-readme-2.md  batch_submit_prs.py  batch_submit_prs_v2.py  batch_submit_prs_v3.py  cli.py  create_hf_profile.py  create_repo.json  devto_article.md  fetch_ci.py  fetch_ci_logs.py  fix_hf_metadata.py  fix_links.py  fix_math.py  fix_space_config.py  fix_space_docker.py  fix_space_static.py  gen_docker_payload.py  gen_final_docker.py  get_id.py  hf_audit_results.json  hf_create_payload.json  (+46 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  tests.yml
core/: engine.py  evaluator.py  knowledge_graph.py  model.py
data/: knowledge_base.json
docs/: app.js  index.html
neuro_edu/: __init__.py  agent.py  skills.py
scripts/: benchmark.py
tests/: __init__.py  test_agent.py  test_api.py  test_engine.py  test_model.py
translations/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.ru.md  README.zh-TW.md
